12/11/2024 Update Changelog: Bug Fixes for: - Shield Image Pathing - Level Change - Constant Fire Error
Refactoring For:
- LevelParent
- Controller

Added Observer class